--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,14 @@
 @import '~antd/dist/antd.css';
-.App{
-    width: 100vw;
-    height: 100vh;
-  }
+
+.App {
+  width: 100vw;
+  height: 100vh;
+}
+
+.app-spin {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
