--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,8 @@
 @import '~antd/dist/antd.css';
+/* @import '~antd/dist/antd.dark.css'; */
 
 .App {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
 }
 
