--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -1,16 +1,44 @@
-.site-layout-header{
+.site-layout-header {
     display: flex;
     background-color: #fff;
+    padding: 0px 24px;
 }
-.site-header-logo{
+
+.site-header-right {
+    min-width: 220px;
+    display: flex;
+    float: right;
+    align-items: center;
+    justify-content: flex-end;
+    cursor: pointer;
+}
+
+.header-user {
+    padding: 0 24px;
+}
+
+.site-header-logo {
     min-width: 148px;
     height: 100%;
     display: flex;
     padding-left: 16px;
     align-items: center;
 }
-.site-header-logo>h1{
+
+.site-header-logo>h1 {
     margin: 0px;
     margin-left: 16px;
     font-size: 18px;
+    font-weight: bold;
+}
+
+.site-layout-content {
+    margin: 0 16px;
+}
+
+.site-layout-wrap {
+    /* background-color: #fff; */
+    /* padding: 24px; */
+    min-height: 360px;
+    /* box-sizing: border-box; */
 }
