feat: 多语言功能

--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -6,15 +6,12 @@
 
 .site-header-right {
     min-width: 220px;
+    height: 100%;
     display: flex;
     float: right;
     align-items: center;
     justify-content: flex-end;
     cursor: pointer;
-}
-
-.header-user {
-    padding: 0 24px;
 }
 
 .site-header-logo {
@@ -23,6 +20,17 @@
     display: flex;
     padding-left: 16px;
     align-items: center;
+}
+.site-header-notice{
+    width: 336px;
+}
+
+.site-global-header-index-action{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    padding: 0 12px;
+    cursor: pointer;
 }
 
 .site-header-logo>h1 {
