feat: 完善了一些编辑器 1.0

--- a/src/views/Common/Writing/index.css
+++ b/src/views/Common/Writing/index.css
@@ -18,7 +18,18 @@
 .writing-up-image:hover{
     color: #313131;
 }
+.writing-btn-group{
+    cursor: pointer;
+}
 
 .writing-wrap {
     padding: 16px;
 }
+
+/* 编辑器样式 */
+.superFancyBlockquote {
+    color: #999;
+    font-family: 'Hoefler Text', Georgia, serif;
+    font-style: italic;
+    text-align: center;
+  }
